# backlayer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  TODO.md  package.json  pnpm-lock.yaml
.github/workflows/: release-arch-package.yml
.local-code/: architecture.md  decisions.md  project.md  runs.jsonl
apps/animation-probe/: Cargo.toml
apps/animation-probe/src/: main.rs
apps/backlayerd/: Cargo.toml
apps/backlayerd/src/: ipc.rs  main.rs  runtime.rs
apps/scene-runner/: Cargo.toml
apps/scene-runner/src/: main.rs
apps/shader-runner/: Cargo.toml
apps/shader-runner/src/: main.rs
apps/ui/: index.html  package.json  tailwind.config.ts
apps/ui/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/capabilities/: default.json
apps/ui/src-tauri/src/: main.rs
apps/ui/src/components/: DetailPanel.tsx  StartupScreen.tsx  WallpaperCard.tsx
apps/ui/src/hooks/: useSnapshot.ts  useTheme.ts
apps/video-runner/: Cargo.toml
apps/video-runner/src/: main.rs
apps/web-runner/: Cargo.toml
apps/web-runner/src/: main.rs
assets/: demo.cyberpunk-city.backlayer  demo.ember-scan.backlayer  demo.neon-grid.backlayer  demo.prism-loop.backlayer
assets/demo.cyberpunk-city/: backlayer.toml
assets/demo.ember-scan/: backlayer.toml
assets/demo.ember-scan/shaders/: ember-scan.wgsl
assets/demo.neon-grid/: backlayer.toml
assets/demo.neon-grid/shaders/: neon-grid.wgsl
assets/demo.sunset-stripes/: backlayer.toml
assets/demo.sunset-stripes/images/: sunset-stripes.ppm
assets/demo.tide-pulse/: backlayer.toml
assets/demo.tide-pulse/shaders/: tide-pulse.wgsl
crates/backlayer-config/: Cargo.toml
crates/backlayer-config/src/: lib.rs
crates/backlayer-hyprland/: Cargo.toml
crates/backlayer-hyprland/src/: lib.rs
crates/backlayer-kde/: Cargo.toml
crates/backlayer-kde/src/: lib.rs
crates/backlayer-renderer-image/: Cargo.toml
crates/backlayer-renderer-image/src/: lib.rs
crates/backlayer-renderer-shader/: Cargo.toml
crates/backlayer-renderer-shader/src/: lib.rs
crates/backlayer-renderer-video/: Cargo.toml
crates/backlayer-renderer-video/src/: lib.rs
crates/backlayer-types/: Cargo.toml
crates/backlayer-types/src/: lib.rs
crates/backlayer-wayland/: Cargo.toml
crates/backlayer-wayland/src/: lib.rs
docs/: animation-probe.md  architecture.md  configuration.md  install.md  limitations.md  manual-testing.md  systemd.md
integrations/kde-plasma/: README.md  install.sh
integrations/kde-plasma/backlayer-wallpaper/: metadata.json
integrations/kde-plasma/backlayer-wallpaper/contents/ui/: main.qml
packaging/arch/: PKGBUILD  README.md  backlayer.desktop  backlayer.install  build-runtime.sh  install-runtime.sh
packaging/arch/pkg/backlayer/: .BUILDINFO  .MTREE  .PKGINFO
packaging/arch/pkg/backlayer/usr/share/backlayer/assets/: demo.sunset-stripes.backlayer  demo.tide-pulse.backlayer
packaging/aur/: README.md  render-release.sh
packaging/aur/backlayer/: .SRCINFO  PKGBUILD  PKGBUILD.in
packaging/aur/backlayer-git/: .SRCINFO  PKGBUILD
packaging/release/: create-source-tarball.sh
packaging/systemd/: backlayerd-arch.service  backlayerd.service
