[package]
name = "animation-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
backlayer-renderer-shader.workspace = true
backlayer-wayland.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
