[package]
name = "scene-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
backlayer-hyprland.workspace = true
backlayer-renderer-image.workspace = true
backlayer-types.workspace = true
backlayer-wayland.workspace = true
bytemuck = { version = "1.23.2", features = ["derive"] }
image = { version = "0.25.8", default-features = true, features = ["gif", "jpeg", "png", "webp"] }
image_dds = { version = "0.7.2", default-features = false, features = ["image"] }
pollster = "0.4.0"
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
