[package]
name = "video-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
backlayer-hyprland.workspace = true
backlayer-types.workspace = true
backlayer-wayland.workspace = true
bytemuck = { version = "1.23.2", features = ["derive"] }
pollster = "0.4.0"
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
