[package]
name = "web-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
backlayer-renderer-image.workspace = true
backlayer-types.workspace = true
backlayer-wayland.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
